# enterprise-architecture

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  awesome-list.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/contents/extended_reading/: ibm_bsp.md
docs/source/contents/history/: ibm-bsp.md  overview.md
docs/source/contents/part1/: ch01.md
docs/source/contents/practical_guides/: 1_introduction.md  2_approach.md  3_knowledge_import.md  4_top_planning.md  5_mechanism_design.md  6_pilot_verification.md  7_continuous_operation.md  8_appendix.md
docs/source/extras/: ibm_bsp.md
docs/source/history/: overview.md
docs/source/introduction/: ch01.md  ch02.md
docs/source/leading_practices/business_architecture/: warehouse_management.md
docs/source/practices/business_architecture/: warehouse_management.md
enterprise_architecture/: __init__.py
src/enterprise_architecture/: __init__.py
