[tool.poetry]
name = "enterprise-architecture"
version = "1.0"
description = "Knowledge and Practice on Enterprise Architecture"
authors = ["Advisor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.4.16"
myst-parser = "^4.0.0"
sphinx-book-theme = "^1.1.3"
sphinx-design = "^0.6.1"
sphinxcontrib-mermaid = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
