[project]
name = "enterprise-architecture"
dynamic = ["version", "description"]
authors = [
    {name = "Advisor", email = "fineartit@outlook.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: FAIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = [
    "enterprise architecture",
    "system architecture",
    "architecture",
]
requires-python = "==3.12.*"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "sphinx>=8.0.2",
    "sphinx-autobuild>=2024.4.16",
    "myst-parser>=4.0.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
]

[project.urls]
Homepage = "https://github.com/fineartit/enterprise-architecture.git"
Documentation = "https://enterprise-architecture.readthedocs.io"

[tool.pdm]
distribution = false
